// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RestaurantListSection renders RestaurantsCategoryList for a specific category: specific category 1`] = `
<DocumentFragment>
  <section
    class="container mx-auto sm:px-0 flex flex-col gap-32"
  >
    <div>
      <h2
        class="text-[44px] leading-[44px] font-bold text-primary mb-[40px]"
      >
        Fast Food
      </h2>
      <div
        class="grid grid-cols-1 gap-[20px] lg:grid-cols-2 2xl:grid-cols-3"
      />
    </div>
  </section>
</DocumentFragment>
`;

exports[`RestaurantListSection renders all categories when category is "Offers": offers category 1`] = `
<DocumentFragment>
  <section
    class="container mx-auto sm:px-0 flex flex-col gap-32"
  >
    <div>
      <h2
        class="text-[44px] leading-[44px] font-bold text-primary mb-[40px]"
      >
        Fast Food
      </h2>
      <div
        class="grid grid-cols-1 gap-[20px] lg:grid-cols-2 2xl:grid-cols-3"
      >
        <div
          class="text-card-foreground flex justify-between py-[24px] px-[30px] bg-[#fdfdfd] gap-[18px] rounded-[12px] border border-black/10 shadow-[5px_5px_34px_0_rgba(0,0,0,0.25)] lg 2xl:w-[496px]"
        >
          <div
            class="flex flex-col justify-evenly min-h-[178px] text-black lg:pt-[19px]"
          >
            <p
              class="text-xl leading-[23px] font-semiBold mb-[15px]"
            >
              Pizza
            </p>
            <p
              class="font-base text-sm leading-[25px] mb-2"
            >
              Delicious pizza
            </p>
            <p
              class="font-bold text-lg leading-[18px]"
            >
              GDP 10
            </p>
          </div>
          <div
            class="relative w-40 h-40 flex-shrink-0"
          >
            <img
              alt="Pizza"
              class="object-cover rounded-xl"
              src="/pizza.jpg"
            />
            <button
              aria-label="Button add to cart"
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium transition-colors focus:outline-none focus:ring-2 focus:ring-primary/50 disabled:opacity-50 disabled:pointer-events-none bg-secondary text-white hover:bg-[#1a1f33] text-[18px] leading-[24px] absolute bottom-0 right-0 rounded-full w-[49px] h-[49px] p-0 shadow-lg z-10"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-plus h-[25px] w-[25px]"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12h14"
                />
                <path
                  d="M12 5v14"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="text-card-foreground flex justify-between py-[24px] px-[30px] bg-[#fdfdfd] gap-[18px] rounded-[12px] border border-black/10 shadow-[5px_5px_34px_0_rgba(0,0,0,0.25)] lg 2xl:w-[496px]"
        >
          <div
            class="flex flex-col justify-evenly min-h-[178px] text-black lg:pt-[19px]"
          >
            <p
              class="text-xl leading-[23px] font-semiBold mb-[15px]"
            >
              Sushi
            </p>
            <p
              class="font-base text-sm leading-[25px] mb-2"
            >
              Fresh sushi
            </p>
            <p
              class="font-bold text-lg leading-[18px]"
            >
              GDP 15
            </p>
          </div>
          <div
            class="relative w-40 h-40 flex-shrink-0"
          >
            <img
              alt="Sushi"
              class="object-cover rounded-xl"
              src="/sushi.jpg"
            />
            <button
              aria-label="Button add to cart"
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium transition-colors focus:outline-none focus:ring-2 focus:ring-primary/50 disabled:opacity-50 disabled:pointer-events-none bg-secondary text-white hover:bg-[#1a1f33] text-[18px] leading-[24px] absolute bottom-0 right-0 rounded-full w-[49px] h-[49px] p-0 shadow-lg z-10"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-plus h-[25px] w-[25px]"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12h14"
                />
                <path
                  d="M12 5v14"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div>
      <h2
        class="text-[44px] leading-[44px] font-bold text-primary mb-[40px]"
      >
        Japanese
      </h2>
      <div
        class="grid grid-cols-1 gap-[20px] lg:grid-cols-2 2xl:grid-cols-3"
      >
        <div
          class="text-card-foreground flex justify-between py-[24px] px-[30px] bg-[#fdfdfd] gap-[18px] rounded-[12px] border border-black/10 shadow-[5px_5px_34px_0_rgba(0,0,0,0.25)] lg 2xl:w-[496px]"
        >
          <div
            class="flex flex-col justify-evenly min-h-[178px] text-black lg:pt-[19px]"
          >
            <p
              class="text-xl leading-[23px] font-semiBold mb-[15px]"
            >
              Pizza
            </p>
            <p
              class="font-base text-sm leading-[25px] mb-2"
            >
              Delicious pizza
            </p>
            <p
              class="font-bold text-lg leading-[18px]"
            >
              GDP 10
            </p>
          </div>
          <div
            class="relative w-40 h-40 flex-shrink-0"
          >
            <img
              alt="Pizza"
              class="object-cover rounded-xl"
              src="/pizza.jpg"
            />
            <button
              aria-label="Button add to cart"
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium transition-colors focus:outline-none focus:ring-2 focus:ring-primary/50 disabled:opacity-50 disabled:pointer-events-none bg-secondary text-white hover:bg-[#1a1f33] text-[18px] leading-[24px] absolute bottom-0 right-0 rounded-full w-[49px] h-[49px] p-0 shadow-lg z-10"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-plus h-[25px] w-[25px]"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12h14"
                />
                <path
                  d="M12 5v14"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="text-card-foreground flex justify-between py-[24px] px-[30px] bg-[#fdfdfd] gap-[18px] rounded-[12px] border border-black/10 shadow-[5px_5px_34px_0_rgba(0,0,0,0.25)] lg 2xl:w-[496px]"
        >
          <div
            class="flex flex-col justify-evenly min-h-[178px] text-black lg:pt-[19px]"
          >
            <p
              class="text-xl leading-[23px] font-semiBold mb-[15px]"
            >
              Sushi
            </p>
            <p
              class="font-base text-sm leading-[25px] mb-2"
            >
              Fresh sushi
            </p>
            <p
              class="font-bold text-lg leading-[18px]"
            >
              GDP 15
            </p>
          </div>
          <div
            class="relative w-40 h-40 flex-shrink-0"
          >
            <img
              alt="Sushi"
              class="object-cover rounded-xl"
              src="/sushi.jpg"
            />
            <button
              aria-label="Button add to cart"
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium transition-colors focus:outline-none focus:ring-2 focus:ring-primary/50 disabled:opacity-50 disabled:pointer-events-none bg-secondary text-white hover:bg-[#1a1f33] text-[18px] leading-[24px] absolute bottom-0 right-0 rounded-full w-[49px] h-[49px] p-0 shadow-lg z-10"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-plus h-[25px] w-[25px]"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12h14"
                />
                <path
                  d="M12 5v14"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`RestaurantListSection renders all categories when no category is selected: all categories 1`] = `
<DocumentFragment>
  <section
    class="container mx-auto sm:px-0 flex flex-col gap-32"
  >
    <div>
      <h2
        class="text-[44px] leading-[44px] font-bold text-primary mb-[40px]"
      >
        Fast Food
      </h2>
      <div
        class="grid grid-cols-1 gap-[20px] lg:grid-cols-2 2xl:grid-cols-3"
      >
        <div
          class="text-card-foreground flex justify-between py-[24px] px-[30px] bg-[#fdfdfd] gap-[18px] rounded-[12px] border border-black/10 shadow-[5px_5px_34px_0_rgba(0,0,0,0.25)] lg 2xl:w-[496px]"
        >
          <div
            class="flex flex-col justify-evenly min-h-[178px] text-black lg:pt-[19px]"
          >
            <p
              class="text-xl leading-[23px] font-semiBold mb-[15px]"
            >
              Pizza
            </p>
            <p
              class="font-base text-sm leading-[25px] mb-2"
            >
              Delicious pizza
            </p>
            <p
              class="font-bold text-lg leading-[18px]"
            >
              GDP 10
            </p>
          </div>
          <div
            class="relative w-40 h-40 flex-shrink-0"
          >
            <img
              alt="Pizza"
              class="object-cover rounded-xl"
              src="/pizza.jpg"
            />
            <button
              aria-label="Button add to cart"
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium transition-colors focus:outline-none focus:ring-2 focus:ring-primary/50 disabled:opacity-50 disabled:pointer-events-none bg-secondary text-white hover:bg-[#1a1f33] text-[18px] leading-[24px] absolute bottom-0 right-0 rounded-full w-[49px] h-[49px] p-0 shadow-lg z-10"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-plus h-[25px] w-[25px]"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12h14"
                />
                <path
                  d="M12 5v14"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="text-card-foreground flex justify-between py-[24px] px-[30px] bg-[#fdfdfd] gap-[18px] rounded-[12px] border border-black/10 shadow-[5px_5px_34px_0_rgba(0,0,0,0.25)] lg 2xl:w-[496px]"
        >
          <div
            class="flex flex-col justify-evenly min-h-[178px] text-black lg:pt-[19px]"
          >
            <p
              class="text-xl leading-[23px] font-semiBold mb-[15px]"
            >
              Sushi
            </p>
            <p
              class="font-base text-sm leading-[25px] mb-2"
            >
              Fresh sushi
            </p>
            <p
              class="font-bold text-lg leading-[18px]"
            >
              GDP 15
            </p>
          </div>
          <div
            class="relative w-40 h-40 flex-shrink-0"
          >
            <img
              alt="Sushi"
              class="object-cover rounded-xl"
              src="/sushi.jpg"
            />
            <button
              aria-label="Button add to cart"
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium transition-colors focus:outline-none focus:ring-2 focus:ring-primary/50 disabled:opacity-50 disabled:pointer-events-none bg-secondary text-white hover:bg-[#1a1f33] text-[18px] leading-[24px] absolute bottom-0 right-0 rounded-full w-[49px] h-[49px] p-0 shadow-lg z-10"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-plus h-[25px] w-[25px]"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12h14"
                />
                <path
                  d="M12 5v14"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div>
      <h2
        class="text-[44px] leading-[44px] font-bold text-primary mb-[40px]"
      >
        Japanese
      </h2>
      <div
        class="grid grid-cols-1 gap-[20px] lg:grid-cols-2 2xl:grid-cols-3"
      >
        <div
          class="text-card-foreground flex justify-between py-[24px] px-[30px] bg-[#fdfdfd] gap-[18px] rounded-[12px] border border-black/10 shadow-[5px_5px_34px_0_rgba(0,0,0,0.25)] lg 2xl:w-[496px]"
        >
          <div
            class="flex flex-col justify-evenly min-h-[178px] text-black lg:pt-[19px]"
          >
            <p
              class="text-xl leading-[23px] font-semiBold mb-[15px]"
            >
              Pizza
            </p>
            <p
              class="font-base text-sm leading-[25px] mb-2"
            >
              Delicious pizza
            </p>
            <p
              class="font-bold text-lg leading-[18px]"
            >
              GDP 10
            </p>
          </div>
          <div
            class="relative w-40 h-40 flex-shrink-0"
          >
            <img
              alt="Pizza"
              class="object-cover rounded-xl"
              src="/pizza.jpg"
            />
            <button
              aria-label="Button add to cart"
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium transition-colors focus:outline-none focus:ring-2 focus:ring-primary/50 disabled:opacity-50 disabled:pointer-events-none bg-secondary text-white hover:bg-[#1a1f33] text-[18px] leading-[24px] absolute bottom-0 right-0 rounded-full w-[49px] h-[49px] p-0 shadow-lg z-10"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-plus h-[25px] w-[25px]"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12h14"
                />
                <path
                  d="M12 5v14"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="text-card-foreground flex justify-between py-[24px] px-[30px] bg-[#fdfdfd] gap-[18px] rounded-[12px] border border-black/10 shadow-[5px_5px_34px_0_rgba(0,0,0,0.25)] lg 2xl:w-[496px]"
        >
          <div
            class="flex flex-col justify-evenly min-h-[178px] text-black lg:pt-[19px]"
          >
            <p
              class="text-xl leading-[23px] font-semiBold mb-[15px]"
            >
              Sushi
            </p>
            <p
              class="font-base text-sm leading-[25px] mb-2"
            >
              Fresh sushi
            </p>
            <p
              class="font-bold text-lg leading-[18px]"
            >
              GDP 15
            </p>
          </div>
          <div
            class="relative w-40 h-40 flex-shrink-0"
          >
            <img
              alt="Sushi"
              class="object-cover rounded-xl"
              src="/sushi.jpg"
            />
            <button
              aria-label="Button add to cart"
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium transition-colors focus:outline-none focus:ring-2 focus:ring-primary/50 disabled:opacity-50 disabled:pointer-events-none bg-secondary text-white hover:bg-[#1a1f33] text-[18px] leading-[24px] absolute bottom-0 right-0 rounded-full w-[49px] h-[49px] p-0 shadow-lg z-10"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-plus h-[25px] w-[25px]"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12h14"
                />
                <path
                  d="M12 5v14"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`RestaurantListSection renders nothing if getRestaurantList returns empty: empty data 1`] = `
<DocumentFragment>
  <section
    class="container mx-auto sm:px-0 flex flex-col gap-32"
  >
    <div>
      <div
        class="animate-pulse bg-muted mb-[40px] h-[44px] w-[240px] rounded-md"
      />
      <div
        class="grid grid-cols-1 gap-[20px] lg:grid-cols-2 2xl:grid-cols-3"
      >
        <div
          class="text-card-foreground flex justify-between py-[24px] px-[30px] bg-[#fdfdfd] gap-[18px] rounded-[12px] border border-black/10 shadow-[5px_5px_34px_0_rgba(0,0,0,0.25)] lg 2xl:w-[496px]"
        >
          <div
            class="flex flex-col justify-evenly min-h-[178px] text-black lg:pt-[19px] w-full"
          >
            <div
              class="animate-pulse rounded-md bg-muted mb-[15px] h-7 w-40"
            />
            <div
              class="animate-pulse rounded-md bg-muted mb-2 h-5 w-60"
            />
            <div
              class="animate-pulse rounded-md bg-muted h-6 w-24"
            />
          </div>
          <div
            class="relative w-40 h-40 flex-shrink-0 flex items-end"
          >
            <div
              class="animate-pulse bg-muted absolute top-0 left-0 w-full h-full rounded-xl"
            />
            <div
              class="absolute bottom-0 right-0"
            >
              <div
                class="animate-pulse bg-muted rounded-full w-[49px] h-[49px] shadow-lg"
              />
            </div>
          </div>
        </div>
        <div
          class="text-card-foreground flex justify-between py-[24px] px-[30px] bg-[#fdfdfd] gap-[18px] rounded-[12px] border border-black/10 shadow-[5px_5px_34px_0_rgba(0,0,0,0.25)] lg 2xl:w-[496px]"
        >
          <div
            class="flex flex-col justify-evenly min-h-[178px] text-black lg:pt-[19px] w-full"
          >
            <div
              class="animate-pulse rounded-md bg-muted mb-[15px] h-7 w-40"
            />
            <div
              class="animate-pulse rounded-md bg-muted mb-2 h-5 w-60"
            />
            <div
              class="animate-pulse rounded-md bg-muted h-6 w-24"
            />
          </div>
          <div
            class="relative w-40 h-40 flex-shrink-0 flex items-end"
          >
            <div
              class="animate-pulse bg-muted absolute top-0 left-0 w-full h-full rounded-xl"
            />
            <div
              class="absolute bottom-0 right-0"
            >
              <div
                class="animate-pulse bg-muted rounded-full w-[49px] h-[49px] shadow-lg"
              />
            </div>
          </div>
        </div>
        <div
          class="text-card-foreground flex justify-between py-[24px] px-[30px] bg-[#fdfdfd] gap-[18px] rounded-[12px] border border-black/10 shadow-[5px_5px_34px_0_rgba(0,0,0,0.25)] lg 2xl:w-[496px]"
        >
          <div
            class="flex flex-col justify-evenly min-h-[178px] text-black lg:pt-[19px] w-full"
          >
            <div
              class="animate-pulse rounded-md bg-muted mb-[15px] h-7 w-40"
            />
            <div
              class="animate-pulse rounded-md bg-muted mb-2 h-5 w-60"
            />
            <div
              class="animate-pulse rounded-md bg-muted h-6 w-24"
            />
          </div>
          <div
            class="relative w-40 h-40 flex-shrink-0 flex items-end"
          >
            <div
              class="animate-pulse bg-muted absolute top-0 left-0 w-full h-full rounded-xl"
            />
            <div
              class="absolute bottom-0 right-0"
            >
              <div
                class="animate-pulse bg-muted rounded-full w-[49px] h-[49px] shadow-lg"
              />
            </div>
          </div>
        </div>
        <div
          class="text-card-foreground flex justify-between py-[24px] px-[30px] bg-[#fdfdfd] gap-[18px] rounded-[12px] border border-black/10 shadow-[5px_5px_34px_0_rgba(0,0,0,0.25)] lg 2xl:w-[496px]"
        >
          <div
            class="flex flex-col justify-evenly min-h-[178px] text-black lg:pt-[19px] w-full"
          >
            <div
              class="animate-pulse rounded-md bg-muted mb-[15px] h-7 w-40"
            />
            <div
              class="animate-pulse rounded-md bg-muted mb-2 h-5 w-60"
            />
            <div
              class="animate-pulse rounded-md bg-muted h-6 w-24"
            />
          </div>
          <div
            class="relative w-40 h-40 flex-shrink-0 flex items-end"
          >
            <div
              class="animate-pulse bg-muted absolute top-0 left-0 w-full h-full rounded-xl"
            />
            <div
              class="absolute bottom-0 right-0"
            >
              <div
                class="animate-pulse bg-muted rounded-full w-[49px] h-[49px] shadow-lg"
              />
            </div>
          </div>
        </div>
        <div
          class="text-card-foreground flex justify-between py-[24px] px-[30px] bg-[#fdfdfd] gap-[18px] rounded-[12px] border border-black/10 shadow-[5px_5px_34px_0_rgba(0,0,0,0.25)] lg 2xl:w-[496px]"
        >
          <div
            class="flex flex-col justify-evenly min-h-[178px] text-black lg:pt-[19px] w-full"
          >
            <div
              class="animate-pulse rounded-md bg-muted mb-[15px] h-7 w-40"
            />
            <div
              class="animate-pulse rounded-md bg-muted mb-2 h-5 w-60"
            />
            <div
              class="animate-pulse rounded-md bg-muted h-6 w-24"
            />
          </div>
          <div
            class="relative w-40 h-40 flex-shrink-0 flex items-end"
          >
            <div
              class="animate-pulse bg-muted absolute top-0 left-0 w-full h-full rounded-xl"
            />
            <div
              class="absolute bottom-0 right-0"
            >
              <div
                class="animate-pulse bg-muted rounded-full w-[49px] h-[49px] shadow-lg"
              />
            </div>
          </div>
        </div>
        <div
          class="text-card-foreground flex justify-between py-[24px] px-[30px] bg-[#fdfdfd] gap-[18px] rounded-[12px] border border-black/10 shadow-[5px_5px_34px_0_rgba(0,0,0,0.25)] lg 2xl:w-[496px]"
        >
          <div
            class="flex flex-col justify-evenly min-h-[178px] text-black lg:pt-[19px] w-full"
          >
            <div
              class="animate-pulse rounded-md bg-muted mb-[15px] h-7 w-40"
            />
            <div
              class="animate-pulse rounded-md bg-muted mb-2 h-5 w-60"
            />
            <div
              class="animate-pulse rounded-md bg-muted h-6 w-24"
            />
          </div>
          <div
            class="relative w-40 h-40 flex-shrink-0 flex items-end"
          >
            <div
              class="animate-pulse bg-muted absolute top-0 left-0 w-full h-full rounded-xl"
            />
            <div
              class="absolute bottom-0 right-0"
            >
              <div
                class="animate-pulse bg-muted rounded-full w-[49px] h-[49px] shadow-lg"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
